force-app/main/default/objects/Customer_Feedback__c/Customer_Feedback__c.object-meta.xml
<CustomObject>
    <description>This object stores customer follow ups from delighted NPS surveys and CSAT responses.</description>
    <label>Customer Feedback</label>
    <nameField>
        <displayFormat>CF#{0000}</displayFormat>
        <label>Customer Feedback Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Feedback</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>