force-app/main/default/objects/Customer_Feedback__c/fields/Function_Area__c.field-meta.xml
<CustomField>
    <fullName>Function_Area__c</fullName>
    <label>Function Area</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Finance: Financing Structure</fullName>
            </value>
            <value>
                <fullName>Finance: Pricing</fullName>
            </value>
            <value>
                <fullName>Finance: Referral Bonus processing</fullName>
            </value>
            <value>
                <fullName>Finance: Refund Processing</fullName>
            </value>
            <value>
                <fullName>Onboarding: Ease</fullName>
            </value>
            <value>
                <fullName>Onboarding: Resources</fullName>
            </value>
            <value>
                <fullName>Onboarding: Responsiveness</fullName>
            </value>
            <value>
                <fullName>Operations: Condition of Goods</fullName>
            </value>
            <value>
                <fullName>Operations: Delivery Communication</fullName>
            </value>
            <value>
                <fullName>Operations: Order Accuracy</fullName>
            </value>
            <value>
                <fullName>Operations: RMA processing</fullName>
            </value>
            <value>
                <fullName>Operations: Shipping Speed</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Product: ACC</fullName>
            </value>
            <value>
                <fullName>Product: AG</fullName>
            </value>
            <value>
                <fullName>Product: CM</fullName>
            </value>
            <value>
                <fullName>Product: Dashboard</fullName>
            </value>
            <value>
                <fullName>Product: EM</fullName>
            </value>
            <value>
                <fullName>Product: Mobile App</fullName>
            </value>
            <value>
                <fullName>Product: VG</fullName>
            </value>
            <value>
                <fullName>Sales: Experience with Sales Rep</fullName>
            </value>
            <value>
                <fullName>Sales: Order Accuracy</fullName>
            </value>
            <value>
                <fullName>Sales: Product or service did not meet expectations</fullName>
            </value>
            <value>
                <fullName>Support: Broken Promise</fullName>
            </value>
            <value>
                <fullName>Support: Issue Status Follow-up</fullName>
            </value>
            <value>
                <fullName>Support: Rep Knowledgeable</fullName>
            </value>
            <value>
                <fullName>Support: Resolution Time</fullName>
            </value>
            <value>
                <fullName>Support: Response Time</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>